--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
     ]
   },
   "devDependencies": {
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "autoprefixer": "^10.4.7",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "postcss": "^8.4.14",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.4"
   }
 }
